fixed navbar collapse.

--- a/app/containers/HomePage/home.css
+++ b/app/containers/HomePage/home.css
@@ -58,7 +58,7 @@
   .row-wrapper {
     padding-left: 0px;
     padding-right: 0px;
-    margin-top: 50px;
+    margin-top: 60px;
   }
 }
 
